DDD refactor