@@ -17,27 +17,23 @@ public class DateTimeGapFinder {
         DateTime searchStart = searchInterval.getStart();
         DateTime searchEnd = searchInterval.getEnd();
 
-        if (hasNoOverlap(existingIntervals, searchInterval, searchStart, searchEnd)) {
+        if (hasNoOverlap(existingIntervals, searchStart, searchEnd)) {
             gaps.add(searchInterval);
             return gaps;
         }
 
-        // create a sub-list that excludes interval which does not overlap with
-        // searchInterval
-        List<Interval> subExistingList = removeNoneOverlappingIntervals(existingIntervals, searchInterval);
-        DateTime subEarliestStart = subExistingList.get(0).getStart();
-        DateTime subLatestStop = subExistingList.get(subExistingList.size() - 1).getEnd();
 
-        // in case the searchInterval is wider than the union of the existing
-        // include searchInterval.start => earliestExisting.start
+        List<Interval> subExistingList = removeNoneOverlappingIntervals(existingIntervals, searchInterval);
+        DateTime subEarliestStart = subExistingList.getFirst().getStart();
+        DateTime subLatestStop = subExistingList.getLast().getEnd();
+
+
         if (searchStart.isBefore(subEarliestStart)) {
             gaps.add(new Interval(searchStart, subEarliestStart));
         }
 
-        // get all the gaps in the existing list
         gaps.addAll(getExistingIntervalGaps(subExistingList));
 
-        // include latestExisting.stop => searchInterval.stop
         if (searchEnd.isAfter(subLatestStop)) {
             gaps.add(new Interval(subLatestStop, searchEnd));
         }
@@ -46,7 +42,7 @@ public class DateTimeGapFinder {
 
     private static List<Interval> getExistingIntervalGaps(List<Interval> existingList) {
         List<Interval> gaps = new ArrayList<>();
-        Interval current = existingList.get(0);
+        Interval current = existingList.getFirst();
         for (int i = 1; i < existingList.size(); i++) {
             Interval next = existingList.get(i);
             Interval gap = current.gap(next);
@@ -67,11 +63,9 @@ public class DateTimeGapFinder {
         return subExistingList;
     }
 
-    private static boolean hasNoOverlap(List<Interval> existingIntervals, Interval searchInterval, DateTime searchStart, DateTime searchEnd) {
-        DateTime earliestStart = existingIntervals.get(0).getStart();
-        DateTime latestStop = existingIntervals.get(existingIntervals.size() - 1).getEnd();
-        // return the entire search interval if it does not overlap with
-        // existing at all
+    private static boolean hasNoOverlap(List<Interval> existingIntervals, DateTime searchStart, DateTime searchEnd) {
+        DateTime earliestStart = existingIntervals.getFirst().getStart();
+        DateTime latestStop = existingIntervals.getLast().getEnd();
         return searchEnd.isBefore(earliestStart) || searchStart.isAfter(latestStop);
     }
 }
